air-quality-api/overlays/uat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: air-quality-api-uat
  labels:
    env: uat
